--- a/Frontend/BudgetTrackerUI/package.json
+++ b/Frontend/BudgetTrackerUI/package.json
@@ -31,6 +31,8 @@
     "@angular/material": "^21.0.5",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "ag-grid-angular": "^35.0.0",
+    "ag-grid-community": "^35.0.0",
     "apexcharts": "^5.3.6",
     "ng-apexcharts": "^2.0.4",
     "rxjs": "~7.8.0",
